--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-crypto-cosmos",
+  "name": "hover-wars",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,16 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "@react-three/fiber": "8.15.12",
-    "@react-three/drei": "9.99.0",
-    "three": "0.160.0",
-    "uuid": "9.0.1",
-    "react-dom": "^19.2.3"
+    "@linera/client": "^0.15.8",
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/rapier": "^1.5.0",
+    "ethers": "^6.16.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "scripts": "^0.1.0",
+    "socket.io-client": "^4.8.3",
+    "three": "^0.160.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
